# beginai-api

./: .gitignore  main.py  manage.py  pyproject.toml
botapp/management/commands/: agent.py  discord_bot.py  prompts.py
genapi/: asgi.py  settings.py  urls.py  views.py  wsgi.py
text/: helpers.py  urls.py  utils.py  views.py
